--- a/src/App.css
+++ b/src/App.css
@@ -15,13 +15,14 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 50px ;
   color: white;
+  
 }
 
 .App-link {
@@ -35,4 +36,7 @@
   to {
     transform: rotate(360deg);
   }
+}
+form{
+  padding: 30px 0 0 0;
 }
